# sa-python-django-vibeconfig-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
taskmanager/: settings.py  urls.py
tasks/: models.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: main.html  signup.html
tasks/templates/registration/: login.html
