[project]
name = "taskmanager"
version = "0.1.0"
description = "A simple Django Task Manager app"
authors = ["Your Name <you@example.com>"]

dependencies = [
    "django==5.2.4",
    "psycopg2-binary==2.9.10",
    "uvicorn[standard]==0.30.1",
    "whitenoise==6.6.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"
